tests/ui/resolve/bad-type-env-capture.stderr
error[E0401]: can't use generic parameters from outer function
  --> $DIR/bad-type-env-capture.rs:2:15
   |
LL | fn foo<T>() {
   |        - type parameter from outer function
LL |     fn bar(b: T) { }
   |           -   ^ use of generic parameter from outer function
   |           |
   |           help: try using a local generic parameter instead: `<T>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0401`.
